Fixed link not breaking on mobile

--- a/src/app/components/utility/session/session.component.scss
+++ b/src/app/components/utility/session/session.component.scss
@@ -7,5 +7,5 @@
 }
 
 .max-content-width{
-    width: max-content;
+    width: fit-content;
 }
